--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: ToolStats
 description: Collect stats of using tool
-main: Main
-version: 2.7
+main: pro.eugw.ToolStats.Main
+version: 2.8
 author: EugeneWhite
 commands:
   toolstats:
