--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.50'
+    ext.kotlin_version = '1.2.51'
 
     repositories {
         mavenCentral()
@@ -10,7 +10,7 @@ buildscript {
 }
 
 group 'pro.eugw'
-version '4.1'
+version '4.2'
 
 apply plugin: 'kotlin'
 
@@ -22,7 +22,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+    compileOnly fileTree(dir: "libs", includes: ['*.jar'])
 }
 jar {
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
