--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,9 +1,11 @@
 settings:
   reload: 'Config reloaded'
   noPerm: 'No permission'
+  trackSwitch: 'Tracking switched'
 killPlayer:
   enabled: true
-  lore: '&cKilled players'
+  autoStartTracking: true
+  lore: '&cKilled players: %count%'
   tools:
     - DIAMOND_SWORD
     - IRON_SWORD
@@ -30,6 +32,9 @@ killPlayer:
     sound1:
       enabled: true
       sound: BLOCK_ANVIL_USE
+    command1:
+      enabled: true
+      command: 'tell %nickname% good'
     enchant2:
       enabled: true
       ench:
@@ -47,11 +52,15 @@ killPlayer:
     sound2:
       enabled: true
       sound: BLOCK_ANVIL_USE
+    command2:
+      enabled: true
+      command: 'tell %nickname% very good'
   worlds:
       - world
 killMob:
   enabled: true
-  lore: '&cKilled mobs'
+  autoStartTracking: true
+  lore: '&cKilled mobs: %count%'
   tools:
     - DIAMOND_SWORD
     - IRON_SWORD
@@ -77,6 +86,9 @@ killMob:
     sound1:
       enabled: true
       sound: BLOCK_ANVIL_USE
+    command1:
+      enabled: true
+      command: 'tell %nickname% good'
     enchant2:
       enabled: true
       ench:
@@ -93,11 +105,15 @@ killMob:
     sound2:
       enabled: true
       sound: BLOCK_ANVIL_USE
+    command2:
+      enabled: true
+      command: 'tell %nickname% very good'
   worlds:
       - world
 break:
   enabled: true
-  lore: '&aDestroyed blocks'
+  autoStartTracking: true
+  lore: '&aDestroyed blocks: %count%'
   tools:
     - DIAMOND_PICKAXE
     - DIAMOND_SPADE
@@ -133,6 +149,9 @@ break:
     sound1:
       enabled: true
       sound: BLOCK_ANVIL_USE
+    command1:
+      enabled: true
+      command: 'tell %nickname% good'
     enchant2:
       enabled: true
       ench:
@@ -149,5 +168,8 @@ break:
     sound2:
       enabled: true
       sound: BLOCK_ANVIL_USE
+    command2:
+      enabled: true
+      command: 'tell %nickname% very good'
   worlds:
       - world
