--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.51'
+    ext.kotlin_version = '1.3.41'
 
     repositories {
         mavenCentral()
@@ -10,7 +10,7 @@ buildscript {
 }
 
 group 'pro.eugw'
-version '4.4'
+version '4.5'
 
 apply plugin: 'kotlin'
 
@@ -23,8 +23,12 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile 'com.google.code.gson:gson:2.8.5'
-    compileOnly fileTree(dir: "libs", includes: ['*.jar'])
+    implementation fileTree(dir: "libs", includes: ['*.jar'])
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 }
 jar {
+    manifest {
+        attributes 'Main-Class': 'pro.eugw.toolstats.Main'
+    }
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 }
