--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ToolStats
 description: Collect stats of using tool
 main: pro.eugw.toolstats.Main
-version: 4.4
+version: '4.5'
 author: EugeneWhite(EugW)
 commands:
   toolstats:
