--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,8 @@
 name: ToolStats
 description: Collect stats of using tool
 main: pro.eugw.toolstats.Main
-version: '4.5'
+version: '4.6'
+api-version: '1.13'
 author: EugeneWhite(EugW)
 commands:
   toolstats:
