Moved to NBTAPI plugin
- Adapted for changes in 1.14
  - Lore now is recorded not like this "Lore:["example","example2"]" but like this "Lore:['{"text":"example"}','{"text":"example2"}']"
- Temporarily disabled Enchantment functionality, this is to do later
- 1.7 support looks like super dead after moving to NBTAPI, but I have an idea how to bring it back
- ToolStats tracking switch now have larger functionality

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,7 +3,7 @@ settings:
   reload: 'Config reloaded'
   noPerm: 'No permission'
   trackSwitch: 'Tracking switched'
-  noArg: 'Enter start|stop argument'
+  noArg: 'Command usage: /tstracking [break|killPlayer|killMob] [start|stop]'
 killPlayer:
   enabled: true
   autoStartTracking: true
