--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.3.72'
 
     repositories {
         mavenCentral()
@@ -17,13 +17,15 @@ apply plugin: 'kotlin'
 repositories {
     mavenCentral()
     maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
-    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
+    maven { url = 'https://repo.codemc.org/repository/maven-public/'}
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile 'com.google.code.gson:gson:2.8.5'
-    implementation fileTree(dir: "libs", includes: ['*.jar'])
+    compile "com.google.code.gson:gson:2.8.5"
+    implementation "de.tr7zw:item-nbt-api-plugin:2.4.1"
+    implementation "org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT"
 }
 jar {
     manifest {
