--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,16 +1,19 @@
 name: ToolStats
 description: Collect stats of using tool
 main: pro.eugw.toolstats.Main
-version: '4.7'
+version: '4.7.1'
 api-version: '1.16'
 author: EugeneWhite(EugW)
 commands:
   toolstats:
-    description: Reload
+    description: Reload plugin config
     usage: /toolstats
   tstracking:
     description: Starts - stops tracking
     usage: /tstracking (only >1.7)[break|killPlayer|killMob] [start|stop]
+  tsclearlore:
+    description: Use if you're server own changed Lore line in config, will not reset counter
+    usage: /tsclearlore
 permissions:
   toolstats.reload:
     description: Reload permission
@@ -23,4 +26,7 @@ permissions:
     default: op
   toolstats.tstracking:
     description: Allow start/stop tracking
+    default: op
+  toolstats.tsclearlore:
+    description: Allow clearing item Lore
     default: op
