--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,32 @@
-buildscript {
-    ext.kotlin_version = '1.3.72'
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
 }
 
-group 'pro.eugw'
-version '4.7.1'
-
-apply plugin: 'kotlin'
+group = 'pro.eugw'
+version = '4.7.1'
 
 repositories {
     mavenCentral()
-    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
-    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
-    maven { url = 'https://repo.codemc.org/repository/maven-public/'}
+    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+    maven { url 'https://repo.codemc.org/repository/maven-public/' }
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "com.google.code.gson:gson:2.8.5"
-    implementation "de.tr7zw:item-nbt-api-plugin:2.4.1"
-    implementation "org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    compileOnly 'de.tr7zw:item-nbt-api-plugin:2.4.1'
+    compileOnly 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
 }
-jar {
-    manifest {
-        attributes 'Main-Class': 'pro.eugw.toolstats.Main'
-    }
-    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+
+shadowJar {
+    classifier("")
+}
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+
+compileKotlin {
+    kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
 }
